<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <GridLayout
        android:id="@+id/myGridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/text_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="10dp"
            android:hint="@string/enter_text_hint"
            android:textSize="24sp"
            android:gravity="center"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:text="@string/search_button"
            android:padding="2dp"
            />
        <Spinner
            android:padding="2dp"
            android:layout_width="wrap_content"
            android:scrollbarSize="30sp"
            android:layout_height="48dp"
            android:id="@+id/spinner"
            />
        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_student"
            />
    </GridLayout>

    <TableLayout
        android:id="@+id/table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center"
        >
        <TableRow
            android:background="@color/primaryColor"
            android:id="@+id/first_row"
            android:textAlignment="center"
            android:gravity="center"

            tools:ignore="UselessParent">
            <TextView
                android:padding="10sp"
                android:textColor="@color/textColorPrimary"
                android:text="@string/nameCol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:padding="10sp"
                android:textColor="@color/textColorPrimary"
                android:text="@string/ageCol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:padding="10sp"
                android:textColor="@color/textColorPrimary"
                android:text="@string/idCol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:padding="10sp"
                android:textColor="@color/textColorPrimary"
                android:text="@string/markCol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>
    </TableLayout>


</FrameLayout>