<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:gravity="top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_column="2"
    android:layout_row="5"
    tools:context=".AddActivity">
    <TextView
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/name"
        android:layout_column="0"
        android:layout_row="0"
        />
    <EditText
        android:textSize="24sp"
        android:hint="@string/name"
        android:layout_gravity="center"
        android:id="@+id/entername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:width="100dp"
        android:height="48dp"
        />
    <TextView
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/age"
        android:layout_column="0"
        android:layout_row="1"
        />
    <EditText
        android:textSize="24sp"
        android:hint="@string/age"
        android:layout_gravity="center"
        android:id="@+id/enterage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:width="100dp"
        android:height="48dp"
        />
    <TextView
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/id"
        android:layout_column="0"
        android:layout_row="2"
        />
    <EditText
        android:textSize="24sp"
        android:hint="@string/id"
        android:layout_gravity="center"
        android:id="@+id/enterid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:width="100dp"
        android:height="48dp"
        />
    <TextView
        android:textSize="24sp"
        android:layout_gravity="top"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/mark"
        android:layout_column="0"
        android:layout_row="3"
        />
    <EditText
        android:textSize="24sp"
        android:hint="@string/mark"
        android:layout_gravity="top|center"
        android:id="@+id/entermark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:width="100dp"
        android:height="48dp"
        />
    <Button
        android:text="@string/back"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded"
        android:padding="10dp"
        android:id="@+id/back"
        />
    <Button
        android:text="@string/confrim"
        android:id="@+id/conf"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded"
        android:padding="10dp"
        />

</GridLayout>